fixed video element overflow issue

--- a/css/main.css
+++ b/css/main.css
@@ -212,7 +212,7 @@ a {
 }
 .project video {
     align-self: center;
-    width: 100%;
+    width: 80%;
 }
 
 .project img{
